apps/shlink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink
  template:
    metadata:
      labels:
        app: shlink
    spec:
      containers:
        - name: shlink
          image: shlinkio/shlink:5.1.4
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /rest/health
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
            limits:
              memory: 300Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink-web-client
  template:
    metadata:
      labels:
        app: shlink-web-client
    spec:
      containers:
        - name: shlink-web-client
          image: shlinkio/shlink-web-client:4.8.0
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 10Mi
            limits:
              memory: 10Mi
